PORT-4397: show master child link in master emet

--- a/packages/ui/src/elements/nexus-dynamic-form/components/SideTabs/SideTabs.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/components/SideTabs/SideTabs.scss
@@ -49,3 +49,12 @@
 .nexus-c-side-tabs__subtab-container--open {
     display: flex;
 }
+
+.tablinks__status-link {
+    &--active {
+        fill: white;
+    }
+    width: 15px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+}
