PORT-4204: Add small css

--- a/src/pages/title-metadata/components/title-metadata-details/components/SyncPublish.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/components/SyncPublish.scss
@@ -6,7 +6,7 @@
         width: 100%;
         text-align: center;
     }
-    > button {
+    button {
         width: 100%;
         > span {
             width: 100%;
