PORT-4145: align with designs

--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -48,3 +48,20 @@
         }
     }
 }
+
+.nexus-c-nexus-person-italic {
+    font-style: italic;
+    opacity: 70%;
+}
+
+.nexus-c-nexus-person-fade {
+    opacity: 70%;
+}
+
+.nexus-c-nexus-person-warning {
+    margin-right: 10px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #E09010;
+}
