--- a/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
+++ b/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
@@ -25,3 +25,19 @@
         @include padding(0.75, 1.75);
     }
 }
+
+.nexus-c-nexus-person-italic {
+    font-style: italic;
+    opacity: 70%;
+}
+
+.nexus-c-nexus-person-fade {
+    opacity: 70%;
+}
+
+.nexus-c-nexus-person-warning {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #E09010;
+}
