PORT-4682: replace opacity with gray color

--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -51,11 +51,11 @@
 
 .nexus-c-nexus-person-italic {
     font-style: italic;
-    opacity: 70%;
+    color: gray;
 }
 
 .nexus-c-nexus-person-fade {
-    opacity: 70%;
+    color: gray;
 }
 
 .nexus-c-nexus-person-warning {
