--- a/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
+++ b/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
@@ -28,11 +28,11 @@
 
 .nexus-c-nexus-person-italic {
     font-style: italic;
-    opacity: 70%;
+    color: gray;
 }
 
 .nexus-c-nexus-person-fade {
-    opacity: 70%;
+    color: gray;
 }
 
 .nexus-c-nexus-person-warning {
