PORT-4259: change text to italic

--- a/packages/ui/src/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
@@ -22,3 +22,12 @@
         color: map-get($neutrals, N50);
     }
 }
+
+.italic {
+    font-style: italic;
+    color: gray;
+}
+
+.italic[title]:hover {
+    color: red;
+}
