PORT-4259: minor css changes

--- a/packages/ui/src/elements/nexus-select/NexusSelect.scss
+++ b/packages/ui/src/elements/nexus-select/NexusSelect.scss
@@ -1,3 +1,8 @@
 .nexus-c-nexus-select-container > .nexus-c-nexus-select__menu > .nexus-c-nexus-select__menu-list {
     max-height: 200px;
 }
+
+.italic {
+    font-style: italic;
+    color: gray;
+}
