PORT-4849 - UAT-3024 - Person Types are missing from TEM/V2 cast/crew

--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -65,3 +65,11 @@
     border-radius: 50%;
     background-color: #e09010;
 }
+
+.nexus-c-nexus-person-type {
+    box-sizing: border-box;
+    display: inline-block;
+    padding: 7px;
+    vertical-align: middle;
+    margin-left: 10px;
+}
