--- a/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
+++ b/packages/ui/src/elements/nexus-person-ro/NexusPersonRO.scss
@@ -41,3 +41,11 @@
     border-radius: 50%;
     background-color: #e09010;
 }
+
+.nexus-c-nexus-person-type {
+    box-sizing: border-box;
+    display: inline-block;
+    padding: 7px;
+    vertical-align: middle;
+    margin-left: 10px;
+}
