--- a/src/pages/manual-tasks/asset-management/ChooseArtwork.scss
+++ b/src/pages/manual-tasks/asset-management/ChooseArtwork.scss
@@ -16,4 +16,16 @@
         flex-wrap: wrap;
         padding: 24px;
     }
+
+    .artwork-actions {
+        display: flex;
+        align-items: center;
+        margin: 0 20px;
+        height: 54px;
+        padding: 10px 0;
+        border-bottom: 2px solid map-get($neutrals, N40);
+        label {
+            margin: 0;
+        }
+    }
 }
