PORT-5040: style changes (#2093)

--- a/packages/styles/scss/atlaskit/colors.scss
+++ b/packages/styles/scss/atlaskit/colors.scss
@@ -11,6 +11,7 @@ $reds: (
     R300: #ff5630,
     R400: #de350b,
     R500: #bf2600,
+    R14: #aa214b,
 );
 
 $yellows: (
@@ -21,6 +22,7 @@ $yellows: (
     Y300: #ffab00,
     Y400: #ff991f,
     Y500: #ff8b00,
+    Y14: #dd9d10,
 );
 
 $greens: (
@@ -31,6 +33,7 @@ $greens: (
     G300: #36b37e,
     G400: #00875a,
     G500: #006644,
+    G14: #2faf97,
 );
 
 $blues: (
@@ -41,6 +44,7 @@ $blues: (
     B300: #0065ff,
     B400: #0052cc,
     B500: #0747a6,
+    B14: #1c90cc,
 );
 
 $purples: (
