--- a/packages/ui/src/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -73,6 +73,7 @@
 }
 .nexus-c-dynamic-form__discard-button,
 .nexus-c-dynamic-form__submit-button {
+    border-radius: 8px;
     border: 1px solid lightgray;
 }
 
@@ -80,19 +81,19 @@
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    @include margin(0, 5, 0, 5);
+    margin: 0 16px;
 }
 
 .success {
-    background-color: map-get($greens, G400);
+    background-color: map-get($greens, G14);
 }
 
 .updated {
-    background-color: map-get($yellows, Y200);
+    background-color: map-get($yellows, Y14);
 }
 
 .error {
-    background-color: map-get($reds, R400);
+    background-color: map-get($reds, R14);
 }
 
 .nexus-c-dynamic-form__validation-msg {
