--- a/src/pages/avails/saved-table-dropdown/SavedTableDropdown.scss
+++ b/src/pages/avails/saved-table-dropdown/SavedTableDropdown.scss
@@ -31,34 +31,45 @@
     &__option-item {
         display: flex;
         justify-content: space-between;
+
         .nexus-cross-icon {
             visibility: hidden;
         }
+
         &:hover {
             .nexus-cross-icon {
                 visibility: visible;
             }
         }
+
         &.item-create {
             display: flex;
             align-items: center;
             justify-content: left;
+
             svg {
                 color: map-get($blues, B400);
                 height: 15px;
                 width: 15px;
             }
         }
+
         &--label {
             margin: 0 5px;
             color: map-get($blues, B400);
         }
     }
 }
+
 .nexus-select__group:first-of-type {
     border-bottom: 1px solid map-get($neutrals, N70);
     margin-bottom: 10px;
 }
+
 .nexus-select__group-heading {
     color: map-get($neutrals, N500);
+}
+
+.nexus-c-saved-table-dropdown__select {
+    z-index: 2;
 }
