--- a/src/pages/title-metadata/components/title-metadata-details/components/SyncPublish.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/components/SyncPublish.scss
@@ -19,7 +19,7 @@
     width: 10px;
     border-radius: 50%;
     display: inline-block;
-    margin-right: 8px;
+    margin-right: 16px;
     background-color: map-get($yellows, Y14);
 }
 
@@ -28,7 +28,7 @@
     width: 10px;
     border-radius: 50%;
     display: inline-block;
-    margin-right: 8px;
+    margin-right: 16px;
     background-color: map-get($greens, G14);
 }
 
@@ -37,6 +37,15 @@
     width: 10px;
     border-radius: 50%;
     display: inline-block;
-    margin-right: 8px;
+    margin-right: 16px;
     background-color: map-get($reds, R14);
+}
+
+.nexus-c-sync-publish__status--empty {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 16px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
