PORT-5116: update designs (#2129)
* PORT-5116: update designs

* clear seasons

--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -5,6 +5,12 @@
     background-color: map-get($neutrals, N0);
 }
 
+.nexus-c-title-details__loading {
+    width: 100%;
+    height: 100%;
+    background-color: map-get($neutrals, N0);
+}
+
 .nexus-c-title-details-__action-dropdown {
     padding-left: 48px;
     display: flex;
