--- a/packages/ui/src/elements/nexus-editable-tag/NexusEditableTag.scss
+++ b/packages/ui/src/elements/nexus-editable-tag/NexusEditableTag.scss
@@ -18,7 +18,7 @@
     align-items: center;
     border-radius: 3px;
     background-color: map-get($colors, nexus-tag-default);
-    overflow: auto;
+    overflow: hidden;
     margin: 6px;
     padding: 3px 3px 0;
 }
