--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -17,3 +17,8 @@
     justify-content: flex-end;
     border-left: 1px solid rgba(black, 0.2);
 }
+
+.note {
+    font-size: 12px;
+    color: rgba(black, 0.6);
+}
