--- a/src/styles/legacy/global.scss
+++ b/src/styles/legacy/global.scss
@@ -148,3 +148,9 @@ input[disabled] {
 .audio-language-form > div {
     overflow: visible;
 }
+
+.atlaskit-portal > div {
+    top: 110px;
+    left: 80px;
+    bottom: inherit;
+}
