PORT-5217: Toast style interference wth popups fix

--- a/src/styles/legacy/global.scss
+++ b/src/styles/legacy/global.scss
@@ -149,7 +149,7 @@ input[disabled] {
     overflow: visible;
 }
 
-.atlaskit-portal > div {
+.atlaskit-portal .kcCMUc {
     top: 110px;
     left: 80px;
     bottom: inherit;
