--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -1,21 +1,22 @@
-// Buttons Related
+@import '~@vubiquity-nexus/portal-styles/scss/color-palette';
 
+// Buttons Related
 .p-button {
-    background: rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: palette(black, 10);
+    border: 1px solid palette(black, 10);
     &.p-button {
         &:enabled {
-            background: rgba(0, 0, 0, 0.1);
+            background: palette(black, 10);
             border: none;
 
             &:hover {
-                background: rgba(0, 0, 0, 0.05);
+                background: palette(black, 5);
             }
 
             &:active {
-                background: #1c90cc;
+                background: palette(blue, 100);
                 .p-button-label {
-                    color: white;
+                    color: palette(white, 100);
                 }
             }
 
@@ -24,30 +25,38 @@
             }
 
             .p-button-label {
-                color: #000000;
+                color: palette(black, 100);
             }
         }
 
         &:disabled {
-            background-color: rgba(0, 0, 0, 0);
+            background-color: palette(black, 0);
             border: none;
+            opacity: 1;
             .p-button-label {
-                color: rgba(0, 0, 0, 0.2);
+                color: palette(black, 20);
             }
         }
     }
 
     &.p-button-text:enabled {
         border-radius: 8px;
-        background-color: rgba(0, 0, 0, 0);
+        background-color: palette(black, 0);
         &:hover {
-            background: rgba(0, 0, 0, 0.05);
+            background: palette(black, 5);
         }
+        &:active {
+            background: palette(blue, 100);
+            .p-button-label {
+                color: palette(white, 100);
+            }
+        }
+
         &:focus {
             box-shadow: none;
         }
         .p-button-label {
-            color: #000000;
+            color: palette(black, 100);
         }
     }
 }
@@ -55,16 +64,14 @@
 // Dialog Related
 
 .p-dialog.p-component {
-    box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.2);
-    //border: solid 1px rgba(0, 0, 0, 0.2);
-    //background-color: #fff;
+    box-shadow: 0 8px 30px 0 palette(black, 2);
     border-radius: 8px;
 
     .p-dialog-header {
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
         padding: 16px 32px;
-        border-bottom: 1px solid #f1f1f1;
+        border-bottom: 1px solid palette(black, 5);
         .p-dialog-title {
             font-weight: bold;
             font-size: 26px;
@@ -81,14 +88,20 @@
     .p-dialog-footer {
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
-        border-top: 1px solid #f1f1f1;
+        border-top: 1px solid palette(black, 5);
         padding: 16px 32px;
         .p-button.p-button:enabled {
             border-radius: 8px;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            background-color: rgba(0, 0, 0, 0.1);
+            border: 1px solid palette(black, 2);
+            background-color: palette(black, 10);
+            &:active {
+                background: palette(blue, 100);
+                .p-button-label {
+                    color: palette(white, 100);
+                }
+            }
             &:hover {
-                background-color: rgba(28, 144, 204, 0.2);
+                background-color: palette(blue, 20);
             }
             &:focus {
                 box-shadow: none;
@@ -97,10 +110,16 @@
 
         .p-button.p-button-text:enabled {
             border-radius: 8px;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            background-color: rgba(0, 0, 0, 0);
+            border: 1px solid palette(black, 2);
+            background-color: palette(black, 0);
+            &:active {
+                background: palette(blue, 100);
+                .p-button-label {
+                    color: palette(white, 100);
+                }
+            }
             &:hover {
-                background-color: rgba(28, 144, 204, 0.2);
+                background-color: palette(blue, 20);
             }
             &:focus {
                 box-shadow: none;
@@ -108,11 +127,11 @@
         }
 
         .p-button-label {
-            color: #000000;
+            color: palette(black, 100);
         }
 
         .p-button-icon {
-            color: #000000;
+            color: palette(black, 100);
         }
     }
 }
