feature/PORT-5133: Define Buttons styling

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -15,6 +15,9 @@
 
             &:active {
                 background: palette(blue, 100);
+                svg {
+                    fill: palette(white, 100);
+                }
                 .p-button-label {
                     color: palette(white, 100);
                 }
@@ -33,32 +36,75 @@
             background-color: palette(black, 0);
             border: none;
             opacity: 1;
+
+            svg,
             .p-button-label {
                 color: palette(black, 20);
+                fill: palette(black, 20);
             }
+        }
+
+        svg {
+            width: 16px;
+            height: 16px;
+            margin: 0 4px;
         }
     }
 
-    &.p-button-text:enabled {
-        border-radius: 8px;
-        background-color: palette(black, 0);
-        &:hover {
-            background: palette(black, 5);
-        }
-        &:active {
-            background: palette(blue, 100);
+    &.p-button-text {
+        &:enabled {
+            border-radius: 8px;
+            background-color: palette(black, 0);
+
+            &:hover {
+                background: palette(black, 5);
+            }
+
+            &:active {
+                background: palette(blue, 100);
+                svg {
+                    fill: palette(white, 100);
+                }
+
+                .p-button-label {
+                    color: palette(white, 100);
+                }
+            }
+
+            &:focus {
+                box-shadow: none;
+            }
+
             .p-button-label {
-                color: palette(white, 100);
+                color: palette(black, 80);
+            }
+        }
+        &:disabled {
+            background-color: palette(black, 0);
+            border: none;
+            opacity: 1;
+
+            svg,
+            .p-button-label {
+                color: palette(black, 20);
+                fill: palette(black, 20);
             }
         }
 
-        &:focus {
-            box-shadow: none;
-        }
-        .p-button-label {
-            color: palette(black, 100);
+        svg {
+            width: 16px;
+            height: 16px;
+            margin: 0 4px;
+            fill: palette(black, 80);
         }
     }
+}
+
+// Icon Buttons
+.p-button.p-button-icon-only.p-button-rounded {
+    width: 3rem;
+    padding: 0.75rem 0;
+    border-radius: 50% !important;
 }
 
 // Dialog Related
@@ -90,39 +136,98 @@
         border-bottom-right-radius: 8px;
         border-top: 1px solid palette(black, 5);
         padding: 16px 32px;
-        .p-button.p-button:enabled {
-            border-radius: 8px;
-            border: 1px solid palette(black, 2);
-            background-color: palette(black, 10);
-            &:active {
-                background: palette(blue, 100);
-                .p-button-label {
-                    color: palette(white, 100);
+
+        .p-button.p-button-icon-only {
+            width: 3rem;
+        }
+        .p-button.p-button {
+            &:enabled {
+                border-radius: 8px;
+                border: 1px solid palette(black, 20);
+                background-color: palette(black, 10);
+
+                &:active {
+                    background: palette(blue, 100);
+                    svg {
+                        fill: palette(white, 100);
+                    }
+                    .p-button-label {
+                        color: palette(white, 100);
+                    }
+                }
+
+                &:hover {
+                    background-color: palette(blue, 20);
+                }
+
+                &:focus {
+                    box-shadow: none;
                 }
             }
-            &:hover {
-                background-color: palette(blue, 20);
+            &:disabled {
+                background-color: palette(black, 0);
+                border: 1px solid palette(black, 10);
+                opacity: 1;
+
+                svg,
+                .p-button-label {
+                    color: palette(black, 20);
+                    fill: palette(black, 20);
+                }
             }
-            &:focus {
-                box-shadow: none;
+
+            svg {
+                width: 16px;
+                height: 16px;
+                margin: 0 4px;
             }
         }
 
-        .p-button.p-button-text:enabled {
-            border-radius: 8px;
-            border: 1px solid palette(black, 2);
-            background-color: palette(black, 0);
-            &:active {
-                background: palette(blue, 100);
+        .p-button.p-button-text {
+            &:enabled {
+                border-radius: 8px;
+                border: 1px solid palette(black, 20);
+                background-color: palette(black, 0);
+
+                &:active {
+                    background: palette(blue, 100);
+                    svg {
+                        fill: palette(white, 100);
+                    }
+                    .p-button-label {
+                        color: palette(white, 100);
+                    }
+                }
+
                 .p-button-label {
-                    color: palette(white, 100);
+                    color: palette(black, 80);
+                }
+
+                &:hover {
+                    background-color: palette(blue, 20);
+                }
+
+                &:focus {
+                    box-shadow: none;
                 }
             }
-            &:hover {
-                background-color: palette(blue, 20);
+            &:disabled {
+                background-color: palette(black, 0);
+                border: 1px solid palette(black, 10);
+                opacity: 1;
+
+                svg,
+                .p-button-label {
+                    color: palette(black, 20);
+                    fill: palette(black, 20);
+                }
             }
-            &:focus {
-                box-shadow: none;
+
+            svg {
+                width: 16px;
+                height: 16px;
+                margin: 0 4px;
+                fill: palette(black, 80);
             }
         }
 
